# pipelock

./: .gitignore  .golangci.yml  .goreleaser.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  Makefile  README.md  SECURITY.md  action.yml  go.mod  go.sum
.clusterfuzzlite/: Dockerfile  build.sh
.github/workflows/: release.yaml  scorecard.yaml  verifiers.yaml
bench/egress/: README.md
charts/pipelock/: Chart.yaml  README.md  values.schema.json  values.yaml
cmd/license-service/: admin.go  admin_import_test.go  admin_test.go  main.go  main_test.go
cmd/pipelock/: main.go  (+1 more)
cmd/pipelock-playground-broker/: main.go  main_test.go
cmd/pipelock-playground-demo/: main.go  orchestrate_cmd_test.go  verify_cmd_test.go
cmd/pipelock-playground-live/: main.go  main_test.go  signals_other.go  signals_unix.go
cmd/pipelock-playground-llm-agent/: harden_linux.go  harden_linux_amd64.go  harden_linux_amd64_test.go  harden_linux_amd64_unit_test.go  harden_linux_test.go  harden_other.go  main.go  main_test.go
cmd/pipelock-playground-toyagent/: main.go  probe_test.go
configs/: audit.yaml  balanced.yaml  claude-code.yaml  cursor.yaml  generic-agent.yaml  hostile-model.yaml  strict.yaml
docs/: badges.md  comparison.md  configuration.md  false-positive-tuning.md  owasp-mapping.md  scan-api.md  security-assurance.md
enterprise/: budget.go  budget_test.go  config.go  config_test.go  coverage_boost_test.go  edition.go  edition_test.go  registry.go  registry_test.go
examples/: ci-workflow-advanced.yaml  ci-workflow.yaml  demo.sh
scripts/: check-helm-chart.sh  playground-gen-code.sh
sdk/verifiers/rust/: Cargo.toml
(+1243 files in other folders)
