[package]
name = "pipelock-verifier-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "Apache-2.0"
description = "Reference Rust verifier for Pipelock signed agent-egress receipts (Audit Packet v0, ActionReceipt v1, EvidenceReceipt v2)."
repository = "https://github.com/Shphrd-ai/pipelock"
homepage = "https://pipelab.org/learn/action-receipt-spec/"
documentation = "https://docs.rs/pipelock-verifier-rs"
readme = "README.md"
keywords = ["pipelock", "verifier", "ed25519", "receipt", "attestation"]
categories = ["command-line-utilities", "cryptography"]
# Restrict publishing to crates.io only (was `publish = false` while in-repo;
# now an explicit allowlist so a stray `cargo publish` can't target a wrong registry).
publish = ["crates-io"]
build = "build.rs"

[[bin]]
name = "pipelock-verifier-rs"
path = "src/main.rs"

[dependencies]
base64 = "=0.22.1"
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["std"] }
hex = "=0.4.3"
jsonschema = { version = "=0.18.3", default-features = false, features = ["draft202012"] }
p256 = { version = "=0.13.2", default-features = false, features = ["ecdsa", "pkcs8"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150", features = ["preserve_order", "unbounded_depth"] }
sha2 = "=0.11.0"
thiserror = "=2.0.18"
# NFC normalization to match Go's golang.org/x/text/unicode/norm in the AARP
# JCS canonicalizer (byte-for-byte cross-language parity on string/key values).
unicode-normalization = "=0.1.25"
x509-parser = { version = "=0.18.1", default-features = false }
